--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -75,10 +75,6 @@ html {
     font-weight: 400;
 }
 
-img {
-    height: 50px;
-    width: 50px;
-}
 
 header {
     width: 100%;
@@ -151,21 +147,66 @@ li a:hover {
 
 main {
     margin: 0 auto;
-    margin-top: 105px; 
+    margin-top: 105px;
     max-width: 90%;
     height: auto;
     max-height: 600px;
     display: grid;
-    grid: repeat(6, 1fr) / repeat(16, 1fr);
+    grid: repeat(6, 130px) / repeat(16, 1fr);
     gap: 2px;
 }
 
 .left-box {
     grid-row: 2 / 6;
     grid-column: 2 / 11;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 75% 25%;
+    background-color: #E0E1DD;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px rgb(25 106 226 / 33%);
 }
+
+.img-container {
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+    width: 100%;
+    height: 100%;
+    background-image: url(../media/images/list_orezne.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px 0px 0px 10px;
+}
+
+.portrait {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    width: 100%;
+    height: 100%;
+    background-image: url(../media/images/portrait_with_bg_pixelated.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 0px 10px 0px 0px;
+}
+
+.js-box {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    color: black;
+    margin: auto;
+}
+
 
 .about {
     grid-row: 2 / 6;
     grid-column: 12 / 16;
+    background-color: #E0E1DD;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px rgb(25 106 226 / 33%);
+    color: black;
+    text-align: center;
+    align-items: center;
+    align-content: center;
 }
